{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 206,
  "lineage": "92eca2ff-c7cb-4bda-a02b-82a19a320738",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:security-group/sg-00c1ad2a5a5538cec",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c1ad2a5a5538cec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2f935cfd336ac96"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vmw-eks-cluster20211004061142113700000003",
            "name_prefix": "vmw-eks-cluster",
            "owner_id": "981894193627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmw-eks-cluster-eks_cluster_sg",
              "application": "vmw",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "vmw-eks-cluster-eks_cluster_sg",
              "application": "vmw",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1e274d1a9cc631"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:security-group/sg-0a2f935cfd336ac96",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f935cfd336ac96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c1ad2a5a5538cec"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c1ad2a5a5538cec"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "vmw-eks-cluster20211004061142713400000004",
            "name_prefix": "vmw-eks-cluster",
            "owner_id": "981894193627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmw-eks-cluster-eks_worker_sg",
              "application": "vmw",
              "environment": "dev",
              "kubernetes.io/cluster/vmw-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "vmw-eks-cluster-eks_worker_sg",
              "application": "vmw",
              "environment": "dev",
              "kubernetes.io/cluster/vmw-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1e274d1a9cc631"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3399032068",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00c1ad2a5a5538cec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1571753405",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00c1ad2a5a5538cec",
            "self": false,
            "source_security_group_id": "sg-0a2f935cfd336ac96",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:subnet/subnet-0e32588e2396ce5f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e32588e2396ce5f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-2a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-2a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02c1e274d1a9cc631"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:subnet/subnet-0b83cccf36231cb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b83cccf36231cb9f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-2b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-2b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02c1e274d1a9cc631"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:subnet/subnet-09df361ea557c78d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09df361ea557c78d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-2c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-2c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02c1e274d1a9cc631"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981894193627:vpc/vpc-02c1e274d1a9cc631",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ded864c7624e047",
            "default_route_table_id": "rtb-06a601fbc4fd597a7",
            "default_security_group_id": "sg-0327b289f17f3ac95",
            "dhcp_options_id": "dopt-0fc8b664",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02c1e274d1a9cc631",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a601fbc4fd597a7",
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}